correction z-index sam

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,8 +116,6 @@ h1 {
 
 
 .body-bg{
-    position: relative;
-    z-index: -2;
     background-image: url('../images/bg.jpg');
     background-repeat: repeat-x;
     background-position: 0px 310px;
@@ -160,12 +158,14 @@ article {
     background-color: white;
     padding-bottom: 24px;
     line-height: 35px;
+    z-index: 10;
 }
 
 .paraparticuliers {
     background-color: white;
     line-height: 35px;
     padding-top: 24px;
+    z-index: 10;
 }
 
 .paraassociations {
@@ -181,14 +181,14 @@ article {
 
 .zebra {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     left: -9%;
     top: 313px;
 }
 
 .sand {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     left: -9%;
     top: -406px;
 }
